--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   "devDependencies": {
     "@storybook/addon-actions": "^6.3.9",
     "@storybook/addon-controls": "^6.3.9",
-    "@storybook/addon-docs": "^6.3.9",
     "@storybook/addon-toolbars": "^6.3.9",
     "@storybook/addon-viewport": "^6.3.9",
     "@storybook/react": "^6.3.9",
@@ -37,10 +36,11 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "prop-types": "^15.7.2",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@mui/material": "^5.0.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.3.1",
-    "styled-normalize": "^8.0.7"
+    "react-dom": "^17.0.2"
   }
 }
