--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
 			"es5"
 		],
 		"module": "esnext",
-		"moduleResolution": "node",
+    "jsx": "react",
+    "moduleResolution": "node",
 		"noEmitOnError": true,
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitReturns": true,
@@ -28,12 +29,13 @@
 			"./src/typings",
 			"node_modules/@types"
 		],
-		"noEmit": true
+		"noEmit": true,
+    "paths": {
+      "@": ["./src"],
+    },
 	},
-	"include": [
-		"src/**/*.ts",
-	],
-    "exclude": [
-        "node_modules",
-    ]
+	"include": ["src"],
+  "exclude": [
+    "node_modules",
+  ]
 }
